--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ body {
     width: auto;
     background-color: rgb(0, 0, 0, 0);
     -webkit-appearance: none;
+    text-align-last: center;
     font-size: 50px;
     height: auto;
 }
