--- a/styles.css
+++ b/styles.css
@@ -1,111 +1,23 @@
 :root {
-    --secondary-color: #252845;
-}
-
-#day-selector {
-    width: 200px;
+    --main-color: ;
+    --secondary-color: ;
 }
 
 body {
-    margin: 0px;
-    background-color: rgb(164, 116, 251);
-}
-
-#main-container {
+    background: linear-gradient(#555555,#1d1d1d);
     width: 100vw;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    background: linear-gradient(rgb(93, 93, 249), rgb(164, 116, 251));
-    align-items: center;
-    justify-content: space-around;
-    overflow: hidden;
+    margin: 0px;
 }
 
-#workout-info-container {
-    width: 400px;
+.container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-}
-
-#workout-dropdown, #day-selector {
-    font-size: 20px;
-    border: none;
-    background-color: rgb(0, 0, 0, 0);
-    text-align: center;
-    color: white;
-    height: 40px;
-    -webkit-appearance: none;
-    width: auto;
+    margin: 10px;
 }
 
 #day-selector {
-    width: auto;
-    background-color: rgb(0, 0, 0, 0);
+    flex-basis: 100%;
     -webkit-appearance: none;
-    text-align-last: center;
-    font-size: 50px;
-    height: auto;
-}
-
-#workout-attributes-container {
-    text-align: center;
-    width: 300px;
-    display: flex;
-    color: white;
-    font-size: 15px;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.workout-attribute {
-    background-color: var(--secondary-color);
-    border-radius: 100px;
-    width: 40%;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.workout-attribute:nth-child(1) {
-    width: 100%;
-    background-color: rgba(168, 182, 236, 0.7);
-    font-size: 30px;
-    height: 50px;
-    margin: 10px;
-}
-
-.permanent-marker-regular {
-    font-family: "Permanent Marker", cursive;
-    font-weight: 400;
-    font-style: normal;
-}
-
-#button-container {
-    width: 300px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
-
-button {
-    font-size: 20px;
-    width: 40%;
-    margin: 10px;
-    height: 80px;
-    border-radius: 50px;
-    border: none;
-    font-family: "Permanent Marker";
-    background-color: rgb(159, 159, 250);
-    color: white;
-}
-
-#workout-dropdown {
-    width: auto;
-    text-align: center;
-    text-align-last: center;
+    background-color: none;
 }
