made some little changes about to make some big ones

--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ body {
 /* the container around the tags for equipment and muslce group */
 #tags {
     flex-basis: 100%;
+    font-size: 15px;
 }
 
 /* container around adding and removing weights */
