made the workout-info stay in place and updated descriptions to look better

--- a/styles.css
+++ b/styles.css
@@ -68,10 +68,19 @@ body {
 .active-workout-info {
     font-size: 48px;
     font-weight: 500;
+    text-align: center;
 }
 
 .active {
     color: rgb(85, 206, 85);
+}
+
+.active-workout-container {
+    width: 20%;
+}
+
+.active-workout-container:nth-child(2) {
+    width: 40%;
 }
 
 /* INDIVIDUAL IDS*/
@@ -111,7 +120,9 @@ body {
 #workout-description {
     height: 100px;
     width: 100%;
-    font-size: 12px;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
 }
 
 /* the container around the tags for equipment and muslce group */
@@ -119,6 +130,8 @@ body {
     flex-basis: 100%;
     font-size: 15px;
     height: 60px;
+    font-size: 12px;
+    font-weight: 700;
 }
 
 /* container around adding and removing weights */
