--- a/styles.css
+++ b/styles.css
@@ -160,15 +160,6 @@ body {
     margin: 0px 30px 0px 30px;
 }
 
-/* nav bar at the bottom */
-#nav {
-    position: fixed;
-    bottom: 0px;
-    background-color: #D9D9D9;
-    width: 100vw;
-    height: 70px;
-}
-
 /* the container for the start and reset buttons */
 #start-workout {
     flex-wrap: nowrap;
@@ -190,4 +181,21 @@ body {
 
 [hidden] {
     display: none;
+}
+
+#timer {
+    position: relative;
+    bottom: 80px;
+    left: 55vw;
+    height: 30px;
+    width: 50px;
+}
+
+#timer-info {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: -1;
 }
