--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0px;
     font-family: 'Inter';
-    background: linear-gradient(rgb(99, 99, 99), rgb(48, 48, 48));
+    background: linear-gradient(#555555, rgb(48, 48, 48));
     overflow: hidden;
 }
 
