--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ body {
 }
 
 #main-container {
+    /* display: none; */
+}
+
+#main-container, #add-main-container{
     width: 100vw;
     height: 100vh;
     align-content: space-between;
@@ -26,24 +30,24 @@ button {
     border: 0px solid black;
 }
 
-#section-one {
+#section-one, #add-section-one {
     height: 400px;
 }
 
-    #day {
+    #day, #add-day {
         width: 100%;
         font-size: 2rem;
         font-weight: 700;
         align-self: baseline;
     }
 
-    #workout-title {
+    #workout-title, #add-workout-title {
         width: 100%;
         font-size: 1.5rem;
         align-self: baseline;
     }
 
-    #tags {
+    #tags, #add-tags {
         width: 100%;
         font-size: 0.8rem;
         align-self: baseline;
@@ -57,7 +61,7 @@ button {
             margin: 0px 5px 0px 0px;
         }
 
-    #description {
+    #description, #add-description {
         width: 100%;
         height: 11vh;
         font-size: 0.9rem;
@@ -65,7 +69,7 @@ button {
         overflow: scroll;
     }
 
-    #weight-changes {
+    #weight-changes, #add-weight-changes {
         width: 100%;
         justify-content: space-between;
         align-self: baseline;
@@ -75,44 +79,35 @@ button {
             width: 20%;
         }
 
-#workout-details {
+#workout-details, #add-workout-details {
     width: 100%;
     justify-content: space-around;
+    display: flex;
 }
     .active {
         color: rgb(122, 243, 122);
     }
 
-    #workout-detail-titles {
+    #workout-detail-titles, #add-workout-detail-titles {
         width: 100%;
         font-size: 1rem;
         justify-content: space-around;
     }
 
-    #workout-detail-titles div {
-        width: 33%;
-        text-align: center;
-    }
-
-    #details {
+    #details, #add-details {
         width: 100%;
         font-size: 2.3rem;
         justify-content: space-around;
     }
 
-    #details div{
-        width: 30%;
-        text-align: center;
-    }
-
-#active-workout-actions {
+#active-workout-actions, #add-workout-actions {
     width: 100%;
     display: flex;
     justify-content: space-between;
     position: relative;
 }
 
-    #active-workout-actions button {
+    #active-workout-actions, #add-workout-actions button {
         margin: 0 5px;;
         transition: all 0.5s ease;
     }
