--- a/styles.css
+++ b/styles.css
@@ -94,10 +94,22 @@ button {
         justify-content: space-around;
     }
 
+    #workout-detail-titles div, #add-workout-detail-titles div{
+        width: 33%;
+        text-align: center;
+        justify-content: space-around;
+    }
+
     #details, #add-details {
         width: 100%;
         font-size: 2.3rem;
         justify-content: space-around;
+    }
+
+    #details div, #add-details div {
+        flex-grow: 1;
+        font-size: 2.3rem;
+        text-align: center;
     }
 
 #active-workout-actions, #add-workout-actions {
