--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,6 @@ body {
     flex-wrap: wrap;
 }
 
-#main-container {
-    /* display: none; */
-}
-
 #main-container, #add-main-container{
     width: 100vw;
     height: 100vh;
@@ -109,6 +105,7 @@ button {
     #details div, #add-details div {
         font-size: 2.3rem;
         text-align: center;
+        width: 33%;
     }
 
 #active-workout-actions, #add-workout-actions {
@@ -116,9 +113,10 @@ button {
     display: flex;
     justify-content: space-between;
     position: relative;
+    
 }
 
-    #active-workout-actions, #add-workout-actions button {
+    #active-workout-actions button, #add-workout-actions button {
         margin: 0 5px;;
         transition: all 0.5s ease;
     }
